--- a/md_files/2_cassandra_architecture-md/3.md
+++ b/md_files/2_cassandra_architecture-md/3.md
@@ -17,7 +17,7 @@ value.
 The consistent hashing algorithm is used in many distributed systems,
 because it has intrinsic ways of dealing with changing range
 assignments.You can refer to *Cassandra High Availability*
-by* *Strickland R. (2014), published by Packt.
+by* *Strickland R. (2014), published by fenago.
 
  
 
@@ -138,7 +138,7 @@ this:
 Copy
 
 ``` {.programlisting .language-markup}
-cassdba@cqlsh:packt&gt; SELECT game, token(game)
+cassdba@cqlsh:fenago&gt; SELECT game, token(game)
     FROM hi_scores_by_game WHERE game=Pacman;
 
  game        | system.token(game)
@@ -152,13 +152,13 @@ preceding five-node cluster, node four is primarily responsible for this
 data, as the token falls between `1844674407370955162` and
 `5534023222112865484` .
 
-Now let's assume that the `packt`  keyspace has the following
+Now let's assume that the `fenago`  keyspace has the following
 definition:
 
 Copy
 
 ``` {.programlisting .language-markup}
-CREATE KEYSPACE packt WITH replication =
+CREATE KEYSPACE fenago WITH replication =
   {'class': 'NetworkTopologyStrategy', 'ClockworkAngels': '3'}
   AND durable_writes = true;
 ```
