--- a/md_files/2_cassandra_architecture-md/6.md
+++ b/md_files/2_cassandra_architecture-md/6.md
@@ -19,7 +19,7 @@ directory. Listing out the files reveals the following:
 Copy
 
 ``` {.programlisting .language-markup}
-cd data/data/packt/hi_scores-d74bfc40634311e8a387e3d147c7be0f
+cd data/data/fenago/hi_scores-d74bfc40634311e8a387e3d147c7be0f
 ls -al
 total 72
 drwxr-xr-x  11 aploetz aploetz  374 May 29 08:28 .
@@ -70,7 +70,7 @@ player named `Connor` :
 Copy
 
 ``` {.programlisting .language-markup}
-cassdba@cqlsh:packt&gt; SELECT * FROM hi_scores WHERE name='Connor';
+cassdba@cqlsh:fenago&gt; SELECT * FROM hi_scores WHERE name='Connor';
  name   | game        | score
 --------+-------------+--------
  Connor |     Frogger |   4220
@@ -98,9 +98,9 @@ The CLI is deprecated and will be removed in Cassandra 2.2.  Consider migrating 
 CQL is fully backwards compatible with Thrift data; see http://www.datastax.com/dev/blog/thrift-to-cql3
 Type 'help;' or '?' for help.
 Type 'quit;' or 'exit;' to quit.
-[cassdba@unknown] use packt;
-Authenticated to keyspace: packt
-[default@packt] get hi_scores['Connor'];
+[cassdba@unknown] use fenago;
+Authenticated to keyspace: fenago
+[default@fenago] get hi_scores['Connor'];
 Using default limit of 100
 Using default cell limit of 100
 -------------------
@@ -148,7 +148,7 @@ queried our the `hi_scores` table for the player named
 Copy
 
 ``` {.programlisting .language-markup}
-tools/bin/sstabledump data/data/packt/hi_scores-73a9df80637b11e8836561ec0efea4b2/mc-1-big-Data.db
+tools/bin/sstabledump data/data/fenago/hi_scores-73a9df80637b11e8836561ec0efea4b2/mc-1-big-Data.db
 [ {
    "partition" : {
      "key" : [ "Connor" ],
