--- a/md_files/2_cassandra_architecture-md/7.md
+++ b/md_files/2_cassandra_architecture-md/7.md
@@ -127,7 +127,7 @@ example keyspace definition:
 Copy
 
 ``` {.programlisting .language-markup}
-CREATE KEYSPACE packt WITH replication = {
+CREATE KEYSPACE fenago WITH replication = {
    'class': 'NetworkTopologyStrategy',
    'ClockworkAngels': '3',
    'PermanentWaves': '2'
@@ -141,7 +141,7 @@ In the previous example, we'll assume the use of
 nodes in our cluster assigned to our `ClockworkAngels` data
 center and some assigned to our `PermanentWaves` data center.
 When a write operation occurs on any of the tables stored in the
-`packt` keyspace, the snitch will ensure that three replicas
+`fenago` keyspace, the snitch will ensure that three replicas
 of that data are written to the `ClockworkAngels` data center.
 Likewise, two replicas of the data will be written to the
 `PermanentWaves` data center.
@@ -373,7 +373,7 @@ range:
 Copy
 
 ``` {.programlisting .language-markup}
-cassdba@cqlsh&gt; SELECT DISTINCT name,token(name) FROM packt.hi_scores
+cassdba@cqlsh&gt; SELECT DISTINCT name,token(name) FROM fenago.hi_scores
    WHERE token(name) &gt;= -9223372036854775807
      AND token(name) &lt;= -7686143364045646507;
 
